@startuml


scale 600 width

package view {

    class Gui{
        -SpringLayout lyt
        -Integer width
        -Integer height
        -JPanel mainPanel
        -Controller busManager
        -JComboBox bussesComboBox
        -Void callMaintenance()
        -JComboBox<String> addBussesComboBox()
    }

}
package models{
    class Starter{
        -Controller busManager
        -void startSimulation()
        -void malfunctionStart()
        -void supervisor()
        -void readfile()
    }
    class Bus{
        -Collection<Passenger> passengers
        -String busID
        -Integer capacity
        -Double speed
        -String type
        -Location location
        -String direction
        -Collection<String> tasks
        -Boolean running
        -Double percentageToDestination
        -Status status
        -Double distance
        +String getDirection()
        +Integer getNumOfPassangers()
        +Double getPercentageToDestination()
        +Location getLocation()
        +Collection<String> getTasks()
        +Void setStatus()
        +String getStatus()
        +String getType()
        +String getBusID()
        +Location getPastLocation()
        -Void Driving()
        -Void unloadPassangers()
        -Void loadPassangers()
        -Void loadPassangersExpresso()
        -Void nextStop()
        -Void busStop()
        +Void run
    }

    class Passenger{
        -String id
        -String destination
        -Boolean arrived
        +Boolean getArrived()
        +String getDestination()
        +Void setArrived()
        +String getId()
    }

    class Location{
        -String name
        -Location northStop
        -Location southStop
        -Double northDistance
        -Double southDistance
        -Collection<Passenger> passengers
        +String getName()
        +Location getNorthStop()
        +Location getSouthStop()
        +Double getNorthDistance
        +Double getSouthDistance
        +Collection<Passenger> getPassengers()
        +Void setSouthAndNorthStop()
        +Void addPassenger()
    }


    Bus --o Passenger
    Location --o Passenger
    controller *-- Bus
    controller *-- Location
    controller *-- Passenger
    controller *-- Starter
    controller *-- Gui

}



package controller {
    class controller{
        -HashMap<String,Bus> Busses
        -HashMap<String,Location> Locations
        -Collection<Passenger> passengers
        -Integer idGenerator
        -Integer passangerNum
        -Integer minPassenger
        -Integer randTimeMalfunction
        +Void addCities()
        +Void addBus()
        +Void addPassangers()
        +HashMap<String,Bus> getBusses()
        +Boolean passangerNumWhitinLimits()
        +Boolean busNumWhitinLimits()
        +Boolean oneOfEachBus()
        +Void expressoBadLocation()
        +Boolean checkFinished()
        +Void maintenance()
        +Void malfunction()
        -Void chooseMalfunction()
        -Void nextMalfunction()
        +String getAllText()
        +Void runBusses()
        +Void stopAllThreads()
    }
}

@enduml
